@@ -6,7 +6,7 @@
   *
   * Maintainer: Alexander Sigachov (alexander.sigachov@gmail.com)
   * 
-  * Изменения сделанные в этом файле будут потеряны при обновлении движка.
+  * Изменения сделанные в этом файле будут потеряны при обновлении MediaWiki.
   *
   * Если необходимо внести изменения в перевод отдельных строк интерфейса,
   * сделайте это посредством редактирования страниц вида «MediaWiki:*».
@@ -1212,9 +1212,15 @@ $3 указал следующую причину: ''$2''",
 'unusedtemplatestext' => 'На этой странице перечислены все страницы пространства имён «Шаблоны», которые не включены в другие страницы. Не забывайте проверить отсутствие других ссылок на шаблон, перед его удалением.',
 'unusedtemplateswlh'  => 'другие ссылки',
 
-# Random redirect
-'randomredirect'         => 'Случайное перенаправление',
-'randomredirect-nopages' => 'В данном пространстве имён нет пренаправлений.',
+# Random pages
+'randompage'                      => 'Случайная страница',
+'randompage-nopages'              => 'В данном пространстве имён отсутствуют страницы.',
+'randomincategory'                => 'Случайная страница в категории',
+'randomincategory-nocategory'     => 'Категория "$1" пуста или не существует',
+'randomincategory-label'          => 'Категория:',
+'randomincategory-submit'         => 'Перейти',
+'randomredirect-nopages'          => 'В данном пространстве имён нет перенаправлений.',
+'randomredirect'                  => 'Случайное перенаправление',
 
 # Statistics
 'statistics'             => 'Статистика',
@@ -1276,8 +1282,6 @@ $3 указал следующую причину: ''$2''",
 'mostrevisions'           => 'Наиболее часто редактировавшиеся страницы',
 'allpages'                => 'Все страницы',
 'prefixindex'             => 'Указатель по началу слов',
-'randompage'              => 'Случайная статья',
-'randompage-nopages'      => 'В данном пространстве имён отсутствуют страницы.',
 'shortpages'              => 'Короткие статьи',
 'longpages'               => 'Длинные страницы',
 'deadendpages'            => 'Тупиковые страницы',
